# reward_hub

./: .gitignore  CLAUDE.md  README.md  distributed_gen.sh  launch_reward_server.sh  launch_sampling_server.sh  launch_sampling_server_large.sh  launch_vllm_server.sh  pyproject.toml  questions.jsonl  requirements.txt  run_annotate.sh  run_annotate_classifier.sh  run_annotate_dpo.sh  run_annotate_dpo_test.sh  run_annotate_rw.sh  run_annotate_test.sh  run_inference.sh  run_inference_large.sh  setup.py
.github/workflows/: pypi.yaml  tests.yaml
merlinite-model-answer3/: merlinite-7b-0.jsonl  merlinite-7b-1.jsonl  merlinite-7b-2.jsonl  merlinite-7b-3.jsonl  merlinite-7b-4.jsonl
reward_hub/: __init__.py  base.py  drsow.py  lms.py  utils.py
reward_hub/hf/: reward.py  reward_intrinsic.py
reward_hub/llm_judge/: groupwise.py  pointwise.py  prompts.py  utils.py
reward_hub/openai/: drsow.py  judge.py  reward.py  vllm_client.py  vllm_server.py
reward_hub/vllm/: reward.py
scripts/: filter.py  mt_best_of_n.py  n_inference.py  post_process_mt.py  post_process_train.py  process_preference_data.py  repeat_n_sampling.py  run_bon_scoring.py  run_bon_scoring_rm.py  tgi_gen.py  utils.py
src/: __init__.py  base.py  dpo_vllm.py  tgi_server.py  utils.py  vllm_server.py
src/hf/: reward.py
src/models/: __init__.py  armo.py
src/openai/: dpo_vllm.py  reward.py
src/vllm/: reward.py
tests/: TEST_SUMMARY.md  conftest.py  hf_orm_test.py  hf_prm_test.py  openai_drsow_test.py  openai_prm_test.py  vllm_prm_test.py
tests/e2e/: README.md  openai_prm_test.py  test_hf_orm.py  test_hf_prm.py
tests/unit/: test_autorm.py  test_backends.py  test_base.py  test_drsow.py  test_llm_judge_dedup.py  test_retry_mechanism.py  test_utils.py
