[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reward_hub"
version = "0.1.0"
description = "A unified hub for reward models in AI alignment"
readme = "README.md"
authors = [
    {name = "Red Hat AI Innovation", email="gxxu@redhat.com" }
]
license = {text = "Apache-2.0"}
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit>=3.0.4,<4.0",
    "ruff>=0.10.0"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements-dev.txt"]}}

[project.urls]
"Homepage" = "https://github.com/Red-Hat-AI-Innovation-Team/reward_hub/tree/main"
"Bug Tracker" = "https://github.com/Red-Hat-AI-Innovation-Team/reward_hub/issues"

[tool.setuptools]
packages = [
    "reward_hub",
    "reward_hub.hf",
    "reward_hub.vllm",
    "reward_hub.openai"
] 

[tool.distutils.bdist_wheel]
universal = true